# sampler

./: CMakeLists.txt  README.md
include/add_elem_o_1/: discrete_distributor.hpp
include/add_elem_o_n/: discrete_distributor.hpp
include/improved/: discrete_distributor.hpp
include/improved/rwlock/: discrete_distributor.hpp
include/origin/: discrete_distributor.hpp
tests/: CMakeLists.txt  test_discrete_distribution.cpp  test_discrete_distribution_add_elem.cpp  test_discrete_distribution_add_elem_common.cpp  test_discrete_distribution_common.cpp  test_discrete_distributor_improved.cpp
tests/multithreaded/: CMakeLists.txt  test_mt_discrete_distribution.cpp
